# startpos-switcher

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  readme.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
src/: GDHMMain.cpp  ModLayers.hpp  layers.h  main.cc  main.cpp  switcher.cc  switcher.cpp  switcher.h  switcher.hpp
src/gdhm/: main.cc  main.h
src/layers/: ModMenuLayer.hpp  ModPauseLayer.hpp  ModPlayLayer.hpp  ModUILayer.hpp  layers.h  menu.h  pause.h  play.h  ui.h
src/main/: main.cc
src/mods/: mods.cc  mods.h
src/switcher/: switcher.cc  switcher.h
